# Confidence_Augmented_Bootstrap_Percolation

./: .gitignore  AGENTS.md  CITATION.cff  GEMINI.md  LICENSE  README.md  pyproject.toml  requirements.txt
.agents/skills/adversarial-review/: SKILL.md
.agents/skills/auditor/: SKILL.md
.agents/skills/cpp-engine/: SKILL.md
.agents/skills/critic/: SKILL.md
.agents/skills/cross-validation/: SKILL.md
.agents/skills/cross-validation/scripts/: dump_reference_run.py
.agents/skills/documentation-publishing/: SKILL.md
.agents/skills/plan-execution/: SKILL.md
.agents/skills/plan-refinement/: SKILL.md
.agents/skills/python-simulation/: SKILL.md
.agents/skills/reproducible-run/: SKILL.md
.agents/skills/research-analysis/: SKILL.md
.agents/skills/reviewer/: SKILL.md
.agents/skills/session-wrapup/: SKILL.md
.agents/workflows/: advisor-prep.md  execute.md  harden.md  improve-agents.md  new-experiment.md  plan.md  research-cycle.md  self-succession.md  session-start.md  verify.md  watchdog.md  wrapup.md
configs/: sweep_wk3_4_r2.json  sweep_wk3_4_r3.json  sweep_wk3_4_r4.json  week2_config.json  week2_config_cpp.json
cpp/: CMakeLists.txt
cpp/include/twocascade/: engine.hpp  graph.hpp  rng.hpp
cpp/src/: engine.cpp  main.cpp
cpp/tests/: test_engine.cpp
docs/: LESSONS_LEARNED.md  PROJECT_TRACKER.md  cpp_engine_walkthrough.md
docs/agents/: adversary.md  cpp.md  documentation.md  orchestrator.md  python.md  research.md
docs/research/: advisor_engagement_strategy.md  f2_adversary_report.md  f2_implementation_assessment.md  f2_theoretical_analysis.md  janson_reformulation_with_fear.md  q1_adversary_review.md  q1_rigor_assessment.md  q1_simulation_feasibility.md  souvik_dhara_papers_application.md  week2_report.md
docs/souvik_dhara_markdown/Global lower mass-bound for critical configuration models in the heavy-tailed regime/: Global lower mass-bound for critical configuration models in the heavy-tailed regime.md
docs/souvik_dhara_markdown/Large deviation for uniform graphs with given degrees /: Large deviation for uniform graphs with given degrees .md  Large deviation for uniform graphs with given degrees _meta.json
docs/souvik_dhara_markdown/SPECTRAL ALGORITHMS OPTIMALLY RECOVER PLANTED SUB-STRUCTURES/: SPECTRAL ALGORITHMS OPTIMALLY RECOVER PLANTED SUB-STRUCTURES.md  SPECTRAL ALGORITHMS OPTIMALLY RECOVER PLANTED SUB-STRUCTURES_meta.json
docs/souvik_dhara_markdown/The Power of Two Matrices in Spectral Algorithms for Community Recovery /: The Power of Two Matrices in Spectral Algorithms for Community Recovery .md  The Power of Two Matrices in Spectral Algorithms for Community Recovery _meta.json
docs/souvik_dhara_markdown/ULTISCALE GENESIS OF A TINY GIANT FOR PERCOLATION ON SCALE-FREE RANDOM GRAPHS/: ULTISCALE GENESIS OF A TINY GIANT FOR PERCOLATION ON SCALE-FREE RANDOM GRAPHS.md  ULTISCALE GENESIS OF A TINY GIANT FOR PERCOLATION ON SCALE-FREE RANDOM GRAPHS_meta.json
scripts/: plot_wk3_4.py
src/twocascade/: analysis.py  meanfield.py  model.py  plotting.py  reference.py  runner.py
tests/: scratch_check.py  test_analysis.py  test_cpp_validation.py  test_decoupling_conjecture.py  test_model.py  test_mu0_bootstrap_threshold.py  test_sweep_integration.py  test_window_len.py
